--- a/MoreLessTextView/build.gradle
+++ b/MoreLessTextView/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.indisparte.morelesstextview'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 22
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -32,10 +32,10 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation(libs.appcompat)
+    implementation(libs.material)
+    implementation(libs.constraintLayout)
+    testImplementation(libs.junitTest)
+    androidTestImplementation(libs.junitAndroidTest)
+    androidTestImplementation(libs.espresso)
 }
