--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,11 @@
             android:name=".ui.MainActivity"
             android:windowSoftInputMode="adjustPan"
             android:exported="true">
-            <intent-filter>
+            <intent-movieFilter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-movieFilter>
         </activity>
     </application>
 
