--- a/MoreLessTextView/build.gradle
+++ b/MoreLessTextView/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.indisparte.morelesstextview'
-    compileSdk 33
+    compileSdk libs.versions.targetSdk.get().toInteger()
 
     defaultConfig {
-        minSdk 22
-        targetSdk 33
+        minSdk libs.versions.minSdk.get().toInteger()
+        targetSdk libs.versions.targetSdk.get().toInteger()
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
