--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,12 @@ def apikeyProperties = new Properties()
 apikeyProperties.load(new FileInputStream(apikeyPropertiesFile))
 
 android {
-    compileSdk 33
+    compileSdk libs.versions.targetSdk.get().toInteger()
 
     defaultConfig {
         applicationId "com.example.cinemates"
-        minSdk 26
-        targetSdk 33
+        minSdk libs.versions.minSdk.get().toInteger()
+        targetSdk libs.versions.targetSdk.get().toInteger()
         versionCode 1
         versionName "1.0"
         // should correspond to key/value pairs inside the file
