--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,8 @@ include ':HorizontalChipView'
 include ':RecyclerViewEmptyStateSupport'
 include ':MoreLessTextView'
 include ':PosterView'
+include ':core:database'
+include ':core:model'
+include ':core:util'
+include ':core:network'
+include ':core:ui'
