--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins{
     alias(libs.plugins.dagger.android) apply false
     alias(libs.plugins.android.library) apply false
     alias(libs.plugins.safeargs) apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.8.20' apply false
 }
 
 
