--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,7 @@ include ':core:model'
 include ':core:util'
 include ':core:network'
 include ':core:ui'
+include ':data:movie'
+include ':data:tv'
+include ':data:actor'
+include ':data:genre'
