--- a/data/movie/build.gradle
+++ b/data/movie/build.gradle
@@ -34,6 +34,9 @@ android {
 
 dependencies {
 
+    implementation project(":core:model")
+    implementation project(":core:network")
+
     implementation libs.bundles.androidX
     testImplementation libs.junitTest
 
