--- a/data/people/build.gradle
+++ b/data/people/build.gradle
@@ -34,6 +34,10 @@ android {
 
 dependencies {
 
+    implementation project(":core:model")
+    implementation project(":core:response")
+    implementation project(":core:network")
+
     implementation libs.bundles.androidX
     testImplementation libs.junitTest
 
