--- a/feature/home/build.gradle
+++ b/feature/home/build.gradle
@@ -29,11 +29,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        viewBinding true
+        dataBinding true
+    }
 }
 
 dependencies {
 
     implementation project(':core:util')
+    implementation project(':core:ui')
     implementation project(':core:network')
     implementation project(':core:model')
     implementation project(':data:movie')
