--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':feature:home'
 include ':feature:movie_details'
 include ':core:navigation'
 include ':data:search'
+include ':feature:search'
