--- a/settings.gradle
+++ b/settings.gradle
@@ -29,3 +29,4 @@ include ':feature:movie_details'
 include ':core:navigation'
 include ':data:search'
 include ':feature:media_search'
+include ':data:discover'
