--- a/feature/media_discover/build.gradle
+++ b/feature/media_discover/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation project(':core:model')
     implementation project(':core:navigation')
     implementation project(':data:discover')
+    implementation project(':data:genre')
 
     implementation(libs.appcompat)
     implementation(libs.material)
