--- a/.github/issue_label_bot.yaml
+++ b/.github/issue_label_bot.yaml
@@ -1,4 +1,4 @@
 label-alias:
-    bug: 'Type: Bug'
-    feature_request: 'Type: Feature'
-    question: 'Type: Question'
+    bug: 'bug'
+    feature_request: 'enhancement'
+    question: 'question'
